[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.112.0"}
alembic = "1.13.2"
sqlalchemy = "2.0.31"
pydantic = "2.8.2"
uvicorn = "0.30.4"
dynaconf = "3.2.6"
asyncpg = "^0.29.0"
psycopg2 = "^2.9.9"
pre-commit = "^3.8.0"
passlib = "^1.7.4"
bcrypt = "^4.2.0"
pyjwt = "^2.9.0"
aioredis = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "main:start"
